...
                                                    </constraints>
                                                    <color key="tintColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <state key="normal" image="square" catalog="system">
                                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                                                    </state>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Lambda List" id="CEe-Pk-dPi">
                        <barButtonItem key="leftBarButtonItem" title="Logout" id="8xa-Af-AmE">
                            <connections>
                                <segue destination="irB-18-J1T" kind="presentation" identifier="LogoutSegue" modalPresentationStyle="fullScreen" id="7HR-Dv-ibc"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="384" height="28"/>
                                        <color key="backgroundColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="sd.Title"/>
                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="22"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                        <rect key="frame" x="0.0" y="107" width="384" height="136"/>
                                        <color key="backgroundColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="sd.Description"/>
                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
...
                        <viewLayoutGuide key="safeArea" id="eas-tT-Kuh"/>
                    </view>
                    <navigationItem key="navigationItem" title="Show Details" id="WVB-r1-TPI">
                        <barButtonItem key="rightBarButtonItem" title="Edit" id="UFP-sG-SHS">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
...
                                        <rect key="frame" x="0.0" y="33" width="384" height="23"/>
                                        <color key="backgroundColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="at.Title"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                        <rect key="frame" x="0.0" y="98" width="384" height="163"/>
                                        <color key="backgroundColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="at.Description"/>
                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B1e-SW-QjP">
                                        <rect key="frame" x="0.0" y="270" width="384" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="at.Button"/>
                                        <state key="normal" title="Create Task"/>
                                        <connections>
...
