...
                                                <rect key="frame" x="0.0" y="28.5" width="384" height="32"/>
                                                <segments>
                                                    <segment title="Log In"/>
                                                    <segment title="Sign Up"/>
                                                </segments>
                                                <connections>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="767-KM-5Jw">
                                                        <rect key="frame" x="0.0" y="38" width="384" height="34"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="ls.email"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="058-m3-zmh">
                                                        <rect key="frame" x="0.0" y="118" width="384" height="34"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="ls.username"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ez3-um-NMh">
                                                        <rect key="frame" x="0.0" y="40" width="384" height="34"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="ls.password"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
...
                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember Me" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wkU-Nu-F1C">
                                                                        <rect key="frame" x="0.0" y="0.0" width="106" height="22"/>
                                                                        <accessibility key="accessibilityConfiguration" identifier="ls.RememberMe"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                                        <nil key="textColor"/>
...
                                                                        <rect key="frame" x="0.0" y="0.0" width="384" height="32"/>
                                                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                        <accessibility key="accessibilityConfiguration" identifier="ls.ActionButton"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                                        <state key="normal" title="Log in">
...
