...
        } else {
            editTask = true
            titleTextField.backgroundColor = .systemGray5
            descriptionTextView.backgroundColor = .systemGray5
            titleTextField.isUserInteractionEnabled = true
            descriptionTextView.isUserInteractionEnabled = true
            editButton?.title = "Done"
        }
    }
    
    
    // MARK: - Properties
    var task: Task?
...
